# PredictiveErrorGatedSpikingTransformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline_dvs128gesture_T10.yaml  baseline_dvs128gesture_T16.yaml  baseline_dvs128gesture_T4.yaml  baseline_dvs128gesture_T8.yaml  error_gated_dvs128gesture_T8.yaml  error_gated_stage1_dvs128gesture_T8.yaml  error_gated_stage1_stage2_dvs128gesture_T8.yaml  error_gated_stage2_dvs128gesture_T8.yaml  membrane_predictability_probe_dvs128gesture_T8.yaml  membrane_target_audit_dvs128gesture_T8.yaml  predictability_probe_dvs128gesture.yaml  predictive_aux_dvs128gesture_T8.yaml  predictive_aux_stage1_dvs128gesture_T8.yaml  predictive_aux_stage1_frozen_dvs128gesture_T8.yaml  predictive_aux_stage1_stage2_dvs128gesture_T8.yaml  predictive_aux_stage2_dvs128gesture_T8.yaml  synthetic_smoke.yaml
notebooks/: membrane_pipeline_analysis_colab.ipynb  pegst_analysis.ipynb  phase1b_official_analysis.ipynb
scripts/: early_exit_eval.py  evaluate.py  membrane_predictability_probe.py  membrane_usefulness_m3b.py  membrane_usefulness_probe.py  predictability_probe.py  smoke_test.py  target_audit.py  temporal_consistency_early_exit_sweep.py  train.py
src/pegst/: __init__.py
src/pegst/data/: dvs.py  synthetic.py
src/pegst/models/: __init__.py  predictive_modules.py  predictive_qkformer.py  qkformer.py  snn_layers.py  temporal_predictors.py
src/pegst/probing/: __init__.py  metrics.py  targets.py
src/pegst/profiling/: activity_profiler.py  internal_state_collector.py
tests/: test_model_shapes.py  test_predictor.py
(+10 files in other folders)
