[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pegst"
version = "0.1.0"
description = "Predictive Error-Gated Spiking Transformer for event-based vision"
requires-python = ">=3.10"
dependencies = [
  "torch>=1.12",
  "pyyaml>=6.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
dvs = [
  "torchvision>=0.13",
  "spikingjelly==0.0.0.0.12",
]
analysis = [
  "pandas",
  "matplotlib",
  "jupyter",
]
cuda = [
  "cupy-cuda12x",
]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
